# masala-embed

./: .gitignore  MERGE_PLAN.md  Makefile.txt  Project_File.py  README.md  approach2.py  embd_approach.py  evaluate_nanobeir.py  main.py  nanobeir_config.yaml  pyproject.toml  requirements.txt
docs/: README.md
esci-dataset/: .env.copy  .gitignore  AGENTS.md  CLAUDE.md  INTENT_SET_ROTATION_PLAN.md  Makefile  README.md  hello.py  pyproject.toml  run_annotation_app.sh  run_bulk_annotation.sh  run_delete_consumables.sh  run_delete_queries.sh  run_generate_intent_sets.sh  run_initial_generation.sh  run_intent_generation.sh  run_migrate_synthetic_data.sh  run_rollback_synthetic_data.sh  run_summary.sh
esci-dataset/annotation/: README.md  app.py  app_bulk.py
esci-dataset/annotation/templates/: annotate.html  annotate_bulk.html
esci-dataset/database/: 001-create-labeler-table.sql  002-insert-labeler-info.sql  003-create-query-table.sql  004-create-consumable-table.sql  005-create-example-table.sql  MegaSQL.sql  synthetic_data_migration_summary.csv  test_connection.ipynb  test_connection.py
esci-dataset/database/migration/: 001-create-labeler-table.sql  003-create-query-table.sql  006-create-label-table.sql  007-create-example-gen-hash-record.sql  008-add-mlflow-run-id-to-query.sql  MegaSQL.sql
esci-dataset/database/scripts/: clear_consumable.py  clear_table.py  delete_consumables.py  delete_queries.py  load_consumables.py  migrate_synthetic_data.py  rollback_synthetic_data.py  run_rollback_synthetic_data.sh
esci-dataset/database/utils/: db_utils.py
esci-dataset/intent_sets/: intent_set_01.json  intent_set_02.json  intent_set_03.json  intent_set_04.json  intent_set_05.json  intent_set_06.json  intent_set_07.json  intent_set_08.json  intent_set_09.json  intent_set_10.json
esci-dataset/notebooks/: 3_step_query_generation.ipynb  DSPy_intent_generation_approach.ipynb  EDA.ipynb  ESCI_Dataset_Insights.md  Explore_Amazon_ESCI.ipynb  Explore_df_unique.ipynb  Explore_mm_100k.ipynb  Granular_Generator_Debug.ipynb  Insert_Consumables.ipynb  Query_Deduplication.ipynb  Query_Generation_Debug.ipynb  SemHash_Dedup.ipynb
esci-dataset/scripts/: mlflow_runs_summary.py
esci-dataset/src/: constants.py  preprocessing.py  utils.py
finetune/: .gitignore  README.md  benchmark.py  clean_web_urls.py  create_test_split.py  download_images.py  evaluate.py  finetune.py  prepare_dataset.py  pyproject.toml  train.py
infrastructure/: .env.colqwen  .env.example  .env.qwen  .env.siglip  README.md  create_embeddings.py  create_embeddings_modal.py  create_faiss.py  create_faiss_modal.py  pyproject.toml  run_inference.sh  run_quantize.sh  run_terraform.sh  server.py  server_local.py  server_modal.py  vllm_inference_local.py  vllm_inference_modal.py
infrastructure/scripts/: inference.py  inference_qwen.py  pyproject.toml  quantize.py
infrastructure/terraform/: main.tf
infrastructure/worker/: package.json  pnpm-lock.yaml  wrangler.toml
(+34 files in other folders)
