[project]
name = "infrastructure"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flashinfer-python>=0.3.1.post1",
    "modal>=1.1.4",
    "vllm==0.10.1.1",
]

[tool.uv.sources]
torch = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
